# irc2026

./: .gitignore
feature/attempt1/: package.xml  setup.py
feature/attempt1/src/msgs/: CMakeLists.txt  package.xml
feature/attempt1/src/my_rob_con/: setup.cfg  setup.py.save
feature/attempt1/src/my_rob_con/launch/: nodes_launch.py
feature/attempt1/src/my_rob_con/rado/: cone_detection.py  rotation_node.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_rob_con/lib/my_rob_con/: cone_detection  movement_node  rotation_node
install/my_rob_con/share/my_rob_con/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/msgs/msg/: TurnCommandMsg.msg
src/my_rob_con/: CMakeLists.txt
