<?xml version="1.0"?>
<package format="3">
  <name>my_rob_con</name>
  <version>0.0.0</version>
  <description>Dual robot perception and control package with cone detection and alignment</description>
  <maintainer email="fidashameer06@gmail.com">fidashameer</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend> <!-- your custom message package -->

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
